--- a/src/main/resources/templates/fragments/tosloginform.html
+++ b/src/main/resources/templates/fragments/tosloginform.html
@@ -16,12 +16,6 @@
         <!-- Terms of service consent check login form template begins here -->
         <div th:fragment="tosloginform" class="d-flex flex-column justify-content-between m-auto">
 
-            <section>
-                <div class="service-ui" th:replace="fragments/osfbannerui :: osfBannerUI">
-                    <a href="fragments/osfbannerui.html"></a>
-                </div>
-            </section>
-
             <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
                 <span th:utext="#{screen.tosconsent.tips}"></span>
             </section>
@@ -80,7 +74,7 @@
                     </section>
 
                     <section>
-                        <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=true, buttonCustomization='button-osf-disabled', messageKey='screen.tosconsent.button.agree')" />
+                        <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=true, buttonCustomization='button-osf-blue', messageKey='screen.tosconsent.button.agree')" />
                     </section>
 
                 </form>
@@ -88,14 +82,15 @@
                 <hr class="my-4" />
 
                 <section class="text-with-mdi">
-                    <span><a th:href="@{/logout(service=${osfUrl.logout})}" th:utext="#{screen.tosconsent.link.cancel}"></a></span>
+                    <span class="full-width center-align-text text-bold">
+                        <a th:href="@{/logout(service=${osfUrl.logout})}" th:utext="#{screen.tosconsent.link.cancel}"></a>
+                    </span>
                 </section>
 
                 <script type="text/javascript">
                     function checkTosConsent(checkbox) {
                         let submitButton = document.getElementById("primarySubmitButton");
                         submitButton.disabled = !checkbox.checked;
-                        submitButton.style.backgroundColor = checkbox.checked ? "#1b6d85": "#efefef";
                     }
                 </script>
 
