--- a/src/main/resources/templates/casPac4jStopWebflow.html
+++ b/src/main/resources/templates/casPac4jStopWebflow.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title th:text="#{screen.pac4j.error.title}">Pac4j Stop Webflow View</title>
-    <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
+    <link href="../../static/css/cas-redesigned.css" rel="stylesheet" th:remove="tag" />
 </head>
 
 <body class="mdc-typography">
